str metodun tevi süresi ve maas rtışları eklendi

--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -11,15 +11,15 @@
      "text": [
       "personel no: 1, adı: Ahmet, soyadı: Yılmaz, departman: İdari, maaş: 7000\n",
       "personel no: 2, adı: Ayşe, soyadı: Kaya, departman: Muhasebe, maaş: 7500\n",
-      "personel no: 3, adı: Mehmet, soyadı: Demir, departman: Dahiliye, maaş: 9000, uzmanlık: Kardiyoloji, deneyim yılı: 10, hastane: Hastane A\n",
-      "personel no: 4, adı: Fatma, soyadı: Şahin, departman: Cerrahi, maaş: 8500, uzmanlık: Ortopedi, deneyim yılı: 8, hastane: Hastane B\n",
-      "personel no: 11, adı: Doktor, soyadı: Bey, departman: Dahiliye, maaş: 9000, uzmanlık: ruh ve sinir, deneyim yılı: 6, hastane: Hastane c\n",
-      "personel no: 5, adı: Ali, soyadı: Çelik, departman: Acil, maaş: 7500, calisma saati=16,sertifika=İlk Yardım,hastane=Hastane A\n",
-      "personel no: 6, adı: Zeynep, soyadı: Toprak, departman: Pediatri, maaş: 7200, calisma saati=12,sertifika=Yenidoğan Bakım,hastane=Hastane B\n",
-      "personel no: 7, adı: Zeynep, soyadı: Hanım, departman: Pediatri, maaş: 7200, calisma saati=12,sertifika=Yenidoğan Bakım,hastane=Hastane B\n",
-      "hasta no:666 ad Ali, soyad Yılmaz, dogum tarihi 1990-05-10 00:00:00, hastalik grip, tedavi özel\n",
-      "hasta no:333 ad Ayşe, soyad Kaya, dogum tarihi 1992-12-15 00:00:00, hastalik zehirlenme, tedavi özel\n",
-      "hasta no:66 ad Fatma, soyad Demir, dogum tarihi 2000-05-20 00:00:00, hastalik depresyon, tedavi normal\n"
+      "personel no: 3, adı: Mehmet, soyadı: Demir, departman: Dahiliye, maaş: 9000, uzmanlık: Kardiyoloji, deneyim yılı: 10, hastane: Hastane A, arttirilmis maas=19000\n",
+      "personel no: 4, adı: Fatma, soyadı: Şahin, departman: Cerrahi, maaş: 8500, uzmanlık: Ortopedi, deneyim yılı: 8, hastane: Hastane B, arttirilmis maas=16500\n",
+      "personel no: 11, adı: Doktor, soyadı: Bey, departman: Dahiliye, maaş: 9000, uzmanlık: ruh ve sinir, deneyim yılı: 6, hastane: Hastane c, arttirilmis maas=15000\n",
+      "personel no: 5, adı: Ali, soyadı: Çelik, departman: Acil, maaş: 7500, calisma saati=16,sertifika=İlk Yardım,hastane=Hastane A, arttirilmis maas=7820\n",
+      "personel no: 6, adı: Zeynep, soyadı: Toprak, departman: Pediatri, maaş: 7200, calisma saati=12,sertifika=Yenidoğan Bakım,hastane=Hastane B, arttirilmis maas=7440\n",
+      "personel no: 7, adı: Zeynep, soyadı: Hanım, departman: Pediatri, maaş: 7200, calisma saati=12,sertifika=Yenidoğan Bakım,hastane=Hastane B, arttirilmis maas=7440\n",
+      "hasta no:666 ad Ali, soyad Yılmaz, dogum tarihi 1990-05-10 00:00:00, hastalik grip, tedavi özel, tedaavi süresi=5\n",
+      "hasta no:333 ad Ayşe, soyad Kaya, dogum tarihi 1992-12-15 00:00:00, hastalik zehirlenme, tedavi özel, tedaavi süresi=9\n",
+      "hasta no:66 ad Fatma, soyad Demir, dogum tarihi 2000-05-20 00:00:00, hastalik depresyon, tedavi normal, tedaavi süresi=34\n"
      ]
     }
    ],
@@ -58,8 +58,15 @@
     "#bilgileri yazdırma\n",
     "tumKisiler=[personel1,personel2,doktor1,doktor2,doktor3,hemsire1,hemsire2,hemsire3,hasta1,hasta2,hasta3]\n",
     "for kisi in tumKisiler:\n",
-    "    print(kisi)\n"
+    "    print(kisi)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
