--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -26,9 +26,9 @@
       "     no      ad   soyad departman    maas uzmanlik  deneyim yili  \\\n",
       "0     1   Ahmet  Yılmaz     İdari  7000.0        0           0.0   \n",
       "1     2    Ayşe    Kaya  Muhasebe  7500.0        0           0.0   \n",
-      "5     5     Ali   Çelik      Acil  7500.0        0           0.0   \n",
-      "6     6  Zeynep  Toprak  Pediatri  7200.0        0           0.0   \n",
-      "7     7  Zeynep   Hanım  Pediatri  7200.0        0           0.0   \n",
+      "5     5     Ali   Çelik      Acil  7820.0        0           0.0   \n",
+      "6     6  Zeynep  Toprak  Pediatri  7440.0        0           0.0   \n",
+      "7     7  Zeynep   Hanım  Pediatri  7440.0        0           0.0   \n",
       "8   666     Ali  Yılmaz         0     0.0        0           0.0   \n",
       "9   333    Ayşe    Kaya         0     0.0        0           0.0   \n",
       "10   66   Fatma   Demir         0     0.0        0           0.0   \n",
@@ -44,289 +44,27 @@
       "10            0.0                0  2000-05-20 00:00:00   depresyon  normal  \n",
       "\n",
       "Uzmanlık: Kardiyoloji\n",
-      "   no      ad  soyad departman    maas     uzmanlik  deneyim yili  \\\n",
-      "2   3  Mehmet  Demir  Dahiliye  9000.0  Kardiyoloji          10.0   \n",
+      "   no      ad  soyad departman     maas     uzmanlik  deneyim yili  \\\n",
+      "2   3  Mehmet  Demir  Dahiliye  19000.0  Kardiyoloji          10.0   \n",
       "\n",
       "   calisma saati sertifika dogum tarihi hastalik tedavi  \n",
       "2            0.0         0            0        0      0  \n",
       "\n",
       "Uzmanlık: Ortopedi\n",
-      "   no     ad  soyad departman    maas  uzmanlik  deneyim yili  calisma saati  \\\n",
-      "3   4  Fatma  Şahin   Cerrahi  8500.0  Ortopedi           8.0            0.0   \n",
+      "   no     ad  soyad departman     maas  uzmanlik  deneyim yili  calisma saati  \\\n",
+      "3   4  Fatma  Şahin   Cerrahi  16500.0  Ortopedi           8.0            0.0   \n",
       "\n",
       "  sertifika dogum tarihi hastalik tedavi  \n",
       "3         0            0        0      0  \n",
       "\n",
       "Uzmanlık: ruh ve sinir\n",
-      "   no      ad soyad departman    maas      uzmanlik  deneyim yili  \\\n",
-      "4  11  Doktor   Bey  Dahiliye  9000.0  ruh ve sinir           6.0   \n",
+      "   no      ad soyad departman     maas      uzmanlik  deneyim yili  \\\n",
+      "4  11  Doktor   Bey  Dahiliye  15000.0  ruh ve sinir           6.0   \n",
       "\n",
       "   calisma saati sertifika dogum tarihi hastalik tedavi  \n",
       "4            0.0         0            0        0      0  \n",
       "\n"
      ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>durumlar</th>\n",
-       "      <th>no</th>\n",
-       "      <th>ad</th>\n",
-       "      <th>soyad</th>\n",
-       "      <th>departman</th>\n",
-       "      <th>maas</th>\n",
-       "      <th>uzmanlik</th>\n",
-       "      <th>deneyim yili</th>\n",
-       "      <th>calisma saati</th>\n",
-       "      <th>sertifika</th>\n",
-       "      <th>dogum tarihi</th>\n",
-       "      <th>hastalik</th>\n",
-       "      <th>tedavi</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>personel</td>\n",
-       "      <td>1</td>\n",
-       "      <td>Ahmet</td>\n",
-       "      <td>Yılmaz</td>\n",
-       "      <td>İdari</td>\n",
-       "      <td>7000.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>personel</td>\n",
-       "      <td>2</td>\n",
-       "      <td>Ayşe</td>\n",
-       "      <td>Kaya</td>\n",
-       "      <td>Muhasebe</td>\n",
-       "      <td>7500.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>doktor</td>\n",
-       "      <td>3</td>\n",
-       "      <td>Mehmet</td>\n",
-       "      <td>Demir</td>\n",
-       "      <td>Dahiliye</td>\n",
-       "      <td>9000.0</td>\n",
-       "      <td>Kardiyoloji</td>\n",
-       "      <td>10.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>doktor</td>\n",
-       "      <td>4</td>\n",
-       "      <td>Fatma</td>\n",
-       "      <td>Şahin</td>\n",
-       "      <td>Cerrahi</td>\n",
-       "      <td>8500.0</td>\n",
-       "      <td>Ortopedi</td>\n",
-       "      <td>8.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>doktor</td>\n",
-       "      <td>11</td>\n",
-       "      <td>Doktor</td>\n",
-       "      <td>Bey</td>\n",
-       "      <td>Dahiliye</td>\n",
-       "      <td>9000.0</td>\n",
-       "      <td>ruh ve sinir</td>\n",
-       "      <td>6.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>hemsire</td>\n",
-       "      <td>5</td>\n",
-       "      <td>Ali</td>\n",
-       "      <td>Çelik</td>\n",
-       "      <td>Acil</td>\n",
-       "      <td>7500.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>16.0</td>\n",
-       "      <td>İlk Yardım</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>hemsire</td>\n",
-       "      <td>6</td>\n",
-       "      <td>Zeynep</td>\n",
-       "      <td>Toprak</td>\n",
-       "      <td>Pediatri</td>\n",
-       "      <td>7200.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>12.0</td>\n",
-       "      <td>Yenidoğan Bakım</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>hemsire</td>\n",
-       "      <td>7</td>\n",
-       "      <td>Zeynep</td>\n",
-       "      <td>Hanım</td>\n",
-       "      <td>Pediatri</td>\n",
-       "      <td>7200.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>12.0</td>\n",
-       "      <td>Yenidoğan Bakım</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>hasta</td>\n",
-       "      <td>666</td>\n",
-       "      <td>Ali</td>\n",
-       "      <td>Yılmaz</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1990-05-10 00:00:00</td>\n",
-       "      <td>grip</td>\n",
-       "      <td>özel</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>hasta</td>\n",
-       "      <td>333</td>\n",
-       "      <td>Ayşe</td>\n",
-       "      <td>Kaya</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1992-12-15 00:00:00</td>\n",
-       "      <td>zehirlenme</td>\n",
-       "      <td>özel</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>hasta</td>\n",
-       "      <td>66</td>\n",
-       "      <td>Fatma</td>\n",
-       "      <td>Demir</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2000-05-20 00:00:00</td>\n",
-       "      <td>depresyon</td>\n",
-       "      <td>normal</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "    durumlar   no      ad   soyad departman    maas      uzmanlik  \\\n",
-       "0   personel    1   Ahmet  Yılmaz     İdari  7000.0             0   \n",
-       "1   personel    2    Ayşe    Kaya  Muhasebe  7500.0             0   \n",
-       "2     doktor    3  Mehmet   Demir  Dahiliye  9000.0   Kardiyoloji   \n",
-       "3     doktor    4   Fatma   Şahin   Cerrahi  8500.0      Ortopedi   \n",
-       "4     doktor   11  Doktor     Bey  Dahiliye  9000.0  ruh ve sinir   \n",
-       "5    hemsire    5     Ali   Çelik      Acil  7500.0             0   \n",
-       "6    hemsire    6  Zeynep  Toprak  Pediatri  7200.0             0   \n",
-       "7    hemsire    7  Zeynep   Hanım  Pediatri  7200.0             0   \n",
-       "8      hasta  666     Ali  Yılmaz         0     0.0             0   \n",
-       "9      hasta  333    Ayşe    Kaya         0     0.0             0   \n",
-       "10     hasta   66   Fatma   Demir         0     0.0             0   \n",
-       "\n",
-       "    deneyim yili  calisma saati        sertifika         dogum tarihi  \\\n",
-       "0            0.0            0.0                0                    0   \n",
-       "1            0.0            0.0                0                    0   \n",
-       "2           10.0            0.0                0                    0   \n",
-       "3            8.0            0.0                0                    0   \n",
-       "4            6.0            0.0                0                    0   \n",
-       "5            0.0           16.0       İlk Yardım                    0   \n",
-       "6            0.0           12.0  Yenidoğan Bakım                    0   \n",
-       "7            0.0           12.0  Yenidoğan Bakım                    0   \n",
-       "8            0.0            0.0                0  1990-05-10 00:00:00   \n",
-       "9            0.0            0.0                0  1992-12-15 00:00:00   \n",
-       "10           0.0            0.0                0  2000-05-20 00:00:00   \n",
-       "\n",
-       "      hastalik  tedavi  \n",
-       "0            0       0  \n",
-       "1            0       0  \n",
-       "2            0       0  \n",
-       "3            0       0  \n",
-       "4            0       0  \n",
-       "5            0       0  \n",
-       "6            0       0  \n",
-       "7            0       0  \n",
-       "8         grip    özel  \n",
-       "9   zehirlenme    özel  \n",
-       "10   depresyon  normal  "
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -385,7 +123,7 @@
     "    personel1.get_maas(), personel2.get_maas(),\n",
     "    doktor1.maas_arttir(), doktor2.maas_arttir(), doktor3.maas_arttir(),\n",
     "    hemsire1.maas_arttir(), hemsire2.maas_arttir(), hemsire3.maas_arttir(),\n",
-    "    None, None, None  # Hasta nesneleri için maaş özelliği olmadığı için None ekledim\n",
+    "    None, None, None  # Hasta nesneleri için maaş özelliği olmadığı için None ekledim #maaslar arttırılmıs halleriyle dataframe yazıldı\n",
     "]\n",
     "\n",
     "#doktor uzmanliklar ve deneyim_yillari\n",
@@ -393,14 +131,14 @@
     "    None, None,\n",
     "    doktor1.get_uzmanlik(), doktor2.get_uzmanlik(), doktor3.get_uzmanlik(),\n",
     "    None, None, None,\n",
-    "    None, None, None  # Hasta nesneleri için uzmanlık özelliği olmadığı için None ekledim\n",
+    "    None, None, None  # uzmanlık özelliği olmayan nesneler için None ekledim\n",
     "]\n",
     "\n",
     "deneyim_yillari = [\n",
     "    None, None,\n",
     "    doktor1.get_deneyim_yili(), doktor2.get_deneyim_yili(), doktor3.get_deneyim_yili(),\n",
     "    None, None, None,\n",
-    "    None, None, None  # Hasta nesneleri için deneyim yılı özelliği olmadığı için None ekledim\n",
+    "    None, None, None  # deneyim yılı özelliği olmayan neneler için None ekledim\n",
     "]\n",
     "\n",
     "# Hasta için hastaliklar ve tedaviler\n",
@@ -418,44 +156,36 @@
     "calisma_saati = [\n",
     "    None, None, None, None, None,\n",
     "    hemsire1.get_calisma_saati(), hemsire2.get_calisma_saati(), hemsire3.get_calisma_saati(),\n",
-    "    None, None, None  #hasta nesneleri için çalışma saati özelliği olmadığı için None ekledim\n",
+    "    None, None, None  # çalışma saati özelliği olmayan nesneler için None ekledim\n",
     "]\n",
     "\n",
     "sertifikalar = [\n",
     "    None, None, None, None, None,\n",
     "    hemsire1.get_sertifika(), hemsire2.get_sertifika(), hemsire3.get_sertifika(),\n",
-    "    None, None, None  #hasta nesneleri için sertifika özelliği olmadığı için None ekledim\n",
+    "    None, None, None  # sertifika özelliği olmayan nesneler için None ekledim\n",
     "]\n",
     "\n",
     "dogum_tarihleri = [\n",
     "    None, None, None, None, None, None, None, None,\n",
     "    hasta1.get_dogumTarihi(), hasta2.get_dogumTarihi(), hasta3.get_dogumTarihi()\n",
     "]\n",
-    "\n",
+    "# sınıflardan alınan bilgilerin tam doru olup olmaması kontrol ediliyor\n",
     "print(\"dataframe:\")\n",
     "meslekler=[\"personel\",\"personel\",\"doktor\",\"doktor\",\"doktor\",\"hemsire\",\"hemsire\",\"hemsire\",\"hasta\",\"hasta\",\"hasta\"]\n",
     "my_dict={\"no\":nolar,\"ad\":adlar,\"soyad\":soyadlar,\"departman\":departmanlar,\"maas\":maaslar,\"uzmanlik\":uzmanliklar,\"deneyim yili\":deneyim_yillari,\n",
-    "         \"calisma saati\":calisma_saati,\"sertifika\":sertifikalar,\"dogum tarihi\":dogum_tarihleri,\"hastalik\":hastaliklar,\"tedavi\":tedaviler} #dataframe data olarak verilen sözlük\n",
-    "#dtafrrame olustutuldu\n",
-    "\n",
+    "        \"calisma saati\":calisma_saati,\"sertifika\":sertifikalar,\"dogum tarihi\":dogum_tarihleri,\"hastalik\":hastaliklar,\"tedavi\":tedaviler} #dataframe data olarak verilen sözlük\n",
+    "#dtafrrame olusturuldu\n",
     "myDataFrame=pd.DataFrame(my_dict)\n",
-    "myDataFrame.fillna(0,inplace=True)  #none degerler 0 yapıldı\n",
-    "\n",
+    "    \n",
+    "myDataFrame.fillna(0,inplace=True)  #none degerler 0 yapıldı inplace=true ile dataframe güncellendi\n",
+    "myDataFrame\n",
+    "# doktorları uzmanlığa göre gruplayıp sayılarını bulma\n",
     "myDataFrame.groupby('uzmanlik').size()\n",
-    "\n",
-    "len(myDataFrame[myDataFrame['deneyim yili'] > 5])\n",
-    "\n",
-    "# 'Uzmanlık' sütununa göre gruplama işlemi\n",
-    "gruplar = myDataFrame.groupby('uzmanlik')\n",
-    "\n",
-    "# Her bir gruptaki verileri yazdır\n",
+    "gruplar=myDataFrame.groupby('uzmanlik')\n",
     "for uzmanlik, grup in gruplar:\n",
     "    print(\"Uzmanlık:\", uzmanlik)\n",
     "    print(grup)\n",
     "    print()\n",
-    "myDataFrame.insert(loc=0,column=\"durumlar\",value=meslekler)\n",
-    "go=myDataFrame.groupby(\"durumlar\")\n",
-    "myDataFrame\n",
     "\n",
     "\n",
     "\n"
