--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -22,6 +22,32 @@
       "hasta no:333 ad Ayşe, soyad Kaya, dogum tarihi 1992-12-15 00:00:00, hastalik zehirlenme, tedavi özel, tedavi süresi=9\n",
       "hasta no:66 ad Fatma, soyad Demir, dogum tarihi 2000-05-20 00:00:00, hastalik depresyon, tedavi normal, tedavi süresi=34\n",
       "dataframe:\n",
+      "     no      ad   soyad departman     maas      uzmanlik  deneyim yili  \\\n",
+      "0     1   Ahmet  Yılmaz     İdari   7000.0             0           0.0   \n",
+      "1     2    Ayşe    Kaya  Muhasebe   7500.0             0           0.0   \n",
+      "2     3  Mehmet   Demir  Dahiliye  19000.0   Kardiyoloji          10.0   \n",
+      "3     4   Fatma   Şahin   Cerrahi  16500.0      Ortopedi           8.0   \n",
+      "4    11  Doktor     Bey  Dahiliye  15000.0  ruh ve sinir           6.0   \n",
+      "5     5     Ali   Çelik      Acil   7820.0             0           0.0   \n",
+      "6     6  Zeynep  Toprak  Pediatri   7440.0             0           0.0   \n",
+      "7     7  Zeynep   Hanım  Pediatri   7440.0             0           0.0   \n",
+      "8   666     Ali  Yılmaz         0      0.0             0           0.0   \n",
+      "9   333    Ayşe    Kaya         0      0.0             0           0.0   \n",
+      "10   66   Fatma   Demir         0      0.0             0           0.0   \n",
+      "\n",
+      "    calisma saati        sertifika         dogum tarihi    hastalik  tedavi  \n",
+      "0             0.0                0                    0           0       0  \n",
+      "1             0.0                0                    0           0       0  \n",
+      "2             0.0                0                    0           0       0  \n",
+      "3             0.0                0                    0           0       0  \n",
+      "4             0.0                0                    0           0       0  \n",
+      "5            16.0       İlk Yardım                    0           0       0  \n",
+      "6            12.0  Yenidoğan Bakım                    0           0       0  \n",
+      "7            12.0  Yenidoğan Bakım                    0           0       0  \n",
+      "8             0.0                0  1990-05-10 00:00:00        grip    özel  \n",
+      "9             0.0                0  1992-12-15 00:00:00  zehirlenme    özel  \n",
+      "10            0.0                0  2000-05-20 00:00:00   depresyon  normal  \n",
+      "Doktorların uzmanlıklari\n",
       "Uzmanlık: 0\n",
       "     no      ad   soyad departman    maas uzmanlik  deneyim yili  \\\n",
       "0     1   Ahmet  Yılmaz     İdari  7000.0        0           0.0   \n",
@@ -178,10 +204,12 @@
     "myDataFrame=pd.DataFrame(my_dict)\n",
     "    \n",
     "myDataFrame.fillna(0,inplace=True)  #none degerler 0 yapıldı inplace=true ile dataframe güncellendi\n",
-    "myDataFrame\n",
+    "print(myDataFrame)\n",
     "# doktorları uzmanlığa göre gruplayıp sayılarını bulma\n",
+    "print(\"Doktorların uzmanlıklari\")\n",
     "myDataFrame.groupby('uzmanlik').size()\n",
     "gruplar=myDataFrame.groupby('uzmanlik')\n",
+    "print(len(gruplar))\n",
     "for uzmanlik, grup in gruplar:\n",
     "    print(\"Uzmanlık:\", uzmanlik)\n",
     "    print(grup)\n",
