--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -10,17 +10,39 @@
      "output_type": "stream",
      "text": [
       "personel bilgileri\n",
-      "personel no: 1, adı: Ahmet, soyadı: Yılmaz, departman: İdari, maaş: 7000\n",
-      "personel no: 2, adı: Ayşe, soyadı: Kaya, departman: Muhasebe, maaş: 7500\n",
-      "personel no: 3, adı: Mehmet, soyadı: Demir, departman: Dahiliye, maaş: 9000, uzmanlık: Kardiyoloji, deneyim yılı: 10, hastane: Hastane A, arttirilmis maas=19000\n",
-      "personel no: 4, adı: Fatma, soyadı: Şahin, departman: Cerrahi, maaş: 8500, uzmanlık: Ortopedi, deneyim yılı: 8, hastane: Hastane B, arttirilmis maas=16500\n",
-      "personel no: 11, adı: Doktor, soyadı: Bey, departman: Dahiliye, maaş: 9000, uzmanlık: ruh ve sinir, deneyim yılı: 6, hastane: Hastane c, arttirilmis maas=15000\n",
-      "personel no: 5, adı: Ali, soyadı: Çelik, departman: Acil, maaş: 7500, calisma saati=16,sertifika=İlk Yardım,hastane=Hastane A, arttirilmis maas=7820\n",
-      "personel no: 6, adı: Zeynep, soyadı: Toprak, departman: Pediatri, maaş: 7200, calisma saati=12,sertifika=Yenidoğan Bakım,hastane=Hastane B, arttirilmis maas=7440\n",
-      "personel no: 7, adı: Zeynep, soyadı: Hanım, departman: Pediatri, maaş: 7200, calisma saati=12,sertifika=Yenidoğan Bakım,hastane=Hastane B, arttirilmis maas=7440\n",
-      "hasta no:666 ad Ali, soyad Yılmaz, dogum tarihi 1990-05-10 00:00:00, hastalik grip, tedavi özel, tedavi süresi=5\n",
-      "hasta no:333 ad Ayşe, soyad Kaya, dogum tarihi 1992-12-15 00:00:00, hastalik zehirlenme, tedavi özel, tedavi süresi=9\n",
-      "hasta no:66 ad Fatma, soyad Demir, dogum tarihi 2000-05-20 00:00:00, hastalik depresyon, tedavi normal, tedavi süresi=34\n",
+      "\n",
+      " personel no: 1, adı: Ahmet, soyadı: Yılmaz, departman: İdari, maaş: 7000 \n",
+      "\n",
+      "\n",
+      " personel no: 2, adı: Ayşe, soyadı: Kaya, departman: Muhasebe, maaş: 7500 \n",
+      "\n",
+      "\n",
+      " personel no: 3, adı: Mehmet, soyadı: Demir, departman: Dahiliye, maaş: 9000, uzmanlık: Kardiyoloji, deneyim yılı: 10, hastane: Hastane A, arttirilmis maas=19000 \n",
+      "\n",
+      "\n",
+      " personel no: 4, adı: Fatma, soyadı: Şahin, departman: Cerrahi, maaş: 8500, uzmanlık: Ortopedi, deneyim yılı: 8, hastane: Hastane B, arttirilmis maas=16500 \n",
+      "\n",
+      "\n",
+      " personel no: 11, adı: Doktor, soyadı: Bey, departman: Dahiliye, maaş: 9000, uzmanlık: ruh ve sinir, deneyim yılı: 6, hastane: Hastane c, arttirilmis maas=15000 \n",
+      "\n",
+      "\n",
+      " personel no: 5, adı: Ali, soyadı: Çelik, departman: Acil, maaş: 7500, calisma saati=16,sertifika=İlk Yardım,hastane=Hastane A, arttirilmis maas=7820 \n",
+      "\n",
+      "\n",
+      " personel no: 6, adı: Zeynep, soyadı: Toprak, departman: Pediatri, maaş: 7200, calisma saati=12,sertifika=Yenidoğan Bakım,hastane=Hastane B, arttirilmis maas=7440 \n",
+      "\n",
+      "\n",
+      " personel no: 7, adı: Zeynep, soyadı: Hanım, departman: Pediatri, maaş: 7200, calisma saati=12,sertifika=Yenidoğan Bakım,hastane=Hastane B, arttirilmis maas=7440 \n",
+      "\n",
+      "\n",
+      " hasta no:666 ad Ali, soyad Yılmaz, dogum tarihi 1990-05-10 00:00:00, hastalik grip, tedavi özel, tedavi süresi=5 \n",
+      "\n",
+      "\n",
+      " hasta no:333 ad Ayşe, soyad Kaya, dogum tarihi 1992-12-15 00:00:00, hastalik zehirlenme, tedavi özel, tedavi süresi=9 \n",
+      "\n",
+      "\n",
+      " hasta no:66 ad Fatma, soyad Demir, dogum tarihi 2000-05-20 00:00:00, hastalik depresyon, tedavi normal, tedavi süresi=34 \n",
+      "\n",
       "dataframe:\n",
       "     no      ad   soyad departman     maas      uzmanlik  deneyim yili  \\\n",
       "0     1   Ahmet  Yılmaz     İdari   7000.0             0           0.0   \n",
@@ -48,48 +70,23 @@
       "9             0.0                0  1992-12-15 00:00:00  zehirlenme    özel  \n",
       "10            0.0                0  2000-05-20 00:00:00   depresyon  normal  \n",
       "Doktorların uzmanlıklari\n",
-      "Uzmanlık: 0\n",
-      "     no      ad   soyad departman    maas uzmanlik  deneyim yili  \\\n",
-      "0     1   Ahmet  Yılmaz     İdari  7000.0        0           0.0   \n",
-      "1     2    Ayşe    Kaya  Muhasebe  7500.0        0           0.0   \n",
-      "5     5     Ali   Çelik      Acil  7820.0        0           0.0   \n",
-      "6     6  Zeynep  Toprak  Pediatri  7440.0        0           0.0   \n",
-      "7     7  Zeynep   Hanım  Pediatri  7440.0        0           0.0   \n",
-      "8   666     Ali  Yılmaz         0     0.0        0           0.0   \n",
-      "9   333    Ayşe    Kaya         0     0.0        0           0.0   \n",
-      "10   66   Fatma   Demir         0     0.0        0           0.0   \n",
-      "\n",
-      "    calisma saati        sertifika         dogum tarihi    hastalik  tedavi  \n",
-      "0             0.0                0                    0           0       0  \n",
-      "1             0.0                0                    0           0       0  \n",
-      "5            16.0       İlk Yardım                    0           0       0  \n",
-      "6            12.0  Yenidoğan Bakım                    0           0       0  \n",
-      "7            12.0  Yenidoğan Bakım                    0           0       0  \n",
-      "8             0.0                0  1990-05-10 00:00:00        grip    özel  \n",
-      "9             0.0                0  1992-12-15 00:00:00  zehirlenme    özel  \n",
-      "10            0.0                0  2000-05-20 00:00:00   depresyon  normal  \n",
-      "\n",
-      "Uzmanlık: Kardiyoloji\n",
-      "   no      ad  soyad departman     maas     uzmanlik  deneyim yili  \\\n",
-      "2   3  Mehmet  Demir  Dahiliye  19000.0  Kardiyoloji          10.0   \n",
+      "Uzmanlık alanlarına göre doktor sayıları:\n",
+      "uzmanlik\n",
+      "0               8\n",
+      "Kardiyoloji     1\n",
+      "Ortopedi        1\n",
+      "ruh ve sinir    1\n",
+      "dtype: int64\n",
+      "5 yıldan fazla deneyime sahip doktorlar:\n",
+      "   no      ad  soyad departman     maas      uzmanlik  deneyim yili  \\\n",
+      "2   3  Mehmet  Demir  Dahiliye  19000.0   Kardiyoloji          10.0   \n",
+      "3   4   Fatma  Şahin   Cerrahi  16500.0      Ortopedi           8.0   \n",
+      "4  11  Doktor    Bey  Dahiliye  15000.0  ruh ve sinir           6.0   \n",
       "\n",
       "   calisma saati sertifika dogum tarihi hastalik tedavi  \n",
       "2            0.0         0            0        0      0  \n",
-      "\n",
-      "Uzmanlık: Ortopedi\n",
-      "   no     ad  soyad departman     maas  uzmanlik  deneyim yili  calisma saati  \\\n",
-      "3   4  Fatma  Şahin   Cerrahi  16500.0  Ortopedi           8.0            0.0   \n",
-      "\n",
-      "  sertifika dogum tarihi hastalik tedavi  \n",
-      "3         0            0        0      0  \n",
-      "\n",
-      "Uzmanlık: ruh ve sinir\n",
-      "   no      ad soyad departman     maas      uzmanlik  deneyim yili  \\\n",
-      "4  11  Doktor   Bey  Dahiliye  15000.0  ruh ve sinir           6.0   \n",
-      "\n",
-      "   calisma saati sertifika dogum tarihi hastalik tedavi  \n",
-      "4            0.0         0            0        0      0  \n",
-      "\n"
+      "3            0.0         0            0        0      0  \n",
+      "4            0.0         0            0        0      0  \n"
      ]
     }
    ],
@@ -129,7 +126,7 @@
     "tumKisiler=[personel1,personel2,doktor1,doktor2,doktor3,hemsire1,hemsire2,hemsire3,hasta1,hasta2,hasta3]\n",
     "print(\"personel bilgileri\")\n",
     "for kisi in tumKisiler:\n",
-    "    print(kisi)\n",
+    "    print(\"\\n\",kisi,\"\\n\")\n",
     "nolar=[personel1.get_personel_no(),personel2.get_personel_no(),doktor1.get_personel_no(),doktor2.get_personel_no(),doktor3.get_personel_no(),\n",
     "       hemsire1.get_personel_no(),hemsire2.get_personel_no(),hemsire3.get_personel_no(),hasta1.get_hastaNo(),hasta2.get_hastaNo(),hasta3.get_hastaNo()]\n",
     "\n",
@@ -195,25 +192,35 @@
     "    None, None, None, None, None, None, None, None,\n",
     "    hasta1.get_dogumTarihi(), hasta2.get_dogumTarihi(), hasta3.get_dogumTarihi()\n",
     "]\n",
-    "# sınıflardan alınan bilgilerin tam doru olup olmaması kontrol ediliyor\n",
-    "print(\"dataframe:\")\n",
-    "meslekler=[\"personel\",\"personel\",\"doktor\",\"doktor\",\"doktor\",\"hemsire\",\"hemsire\",\"hemsire\",\"hasta\",\"hasta\",\"hasta\"]\n",
-    "my_dict={\"no\":nolar,\"ad\":adlar,\"soyad\":soyadlar,\"departman\":departmanlar,\"maas\":maaslar,\"uzmanlik\":uzmanliklar,\"deneyim yili\":deneyim_yillari,\n",
-    "        \"calisma saati\":calisma_saati,\"sertifika\":sertifikalar,\"dogum tarihi\":dogum_tarihleri,\"hastalik\":hastaliklar,\"tedavi\":tedaviler} #dataframe data olarak verilen sözlük\n",
-    "#dtafrrame olusturuldu\n",
-    "myDataFrame=pd.DataFrame(my_dict)\n",
-    "    \n",
-    "myDataFrame.fillna(0,inplace=True)  #none degerler 0 yapıldı inplace=true ile dataframe güncellendi\n",
-    "print(myDataFrame)\n",
-    "# doktorları uzmanlığa göre gruplayıp sayılarını bulma\n",
-    "print(\"Doktorların uzmanlıklari\")\n",
-    "myDataFrame.groupby('uzmanlik').size()\n",
-    "gruplar=myDataFrame.groupby('uzmanlik')\n",
-    "print(len(gruplar))\n",
-    "for uzmanlik, grup in gruplar:\n",
-    "    print(\"Uzmanlık:\", uzmanlik)\n",
-    "    print(grup)\n",
-    "    print()\n",
+    "try:\n",
+    "    # sınıflardan alınan bilgilerin tam doru olup olmaması kontrol ediliyor\n",
+    "    print(\"dataframe:\")\n",
+    "    meslekler=[\"personel\",\"personel\",\"doktor\",\"doktor\",\"doktor\",\"hemsire\",\"hemsire\",\"hemsire\",\"hasta\",\"hasta\",\"hasta\"]\n",
+    "    my_dict={\"no\":nolar,\"ad\":adlar,\"soyad\":soyadlar,\"departman\":departmanlar,\"maas\":maaslar,\"uzmanlik\":uzmanliklar,\"deneyim yili\":deneyim_yillari,\n",
+    "            \"calisma saati\":calisma_saati,\"sertifika\":sertifikalar,\"dogum tarihi\":dogum_tarihleri,\"hastalik\":hastaliklar,\"tedavi\":tedaviler} #dataframe data olarak verilen sözlük\n",
+    "    #datafrrame olusturuldu\n",
+    "    myDataFrame=pd.DataFrame(my_dict) # sozluk keyleri dataframe sütunları\n",
+    "        \n",
+    "    myDataFrame.fillna(0,inplace=True)  #none degerler 0 yapıldı inplace=true ile dataframe güncellendi\n",
+    "    print(myDataFrame)\n",
+    "\n",
+    "\n",
+    "    # doktorları uzmanlığa göre gruplayıp sayılarını bulma\n",
+    "    print(\"Doktorların uzmanlıklari\")\n",
+    "    # Doktorları uzmanlık alanlarına göre gruplandırma ve yazdırma\n",
+    "    uzmanlik_grup = myDataFrame.groupby('uzmanlik').size() #uzmanlığa göre gruplandırıp her birinin sayısını .size fonksiyonu ile buldum\n",
+    "    print(\"Uzmanlık alanlarına göre doktor sayıları:\")\n",
+    "    print(uzmanlik_grup)\n",
+    "\n",
+    "\n",
+    "    # 5 yıldan fazla deneyime sahip doktorları bulma\n",
+    "    doktorlar_fazla_5_yil=myDataFrame[myDataFrame['deneyim yili'] > 5]\n",
+    "    print(\"5 yıldan fazla deneyime sahip doktorlar:\")\n",
+    "    print(doktorlar_fazla_5_yil)\n",
+    "except:\n",
+    "    print(\"Nesneler oluşturulamadı\")\n",
+    "\n",
+    "\n",
     "\n",
     "\n",
     "\n"
