--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -44,31 +44,44 @@
       " hasta no:66 ad Fatma, soyad Demir, dogum tarihi 2000-05-20 00:00:00, hastalik depresyon, tedavi normal, tedavi süresi=34 \n",
       "\n",
       "dataframe:\n",
-      "     no      ad   soyad departman     maas      uzmanlik  deneyim yili  \\\n",
-      "0     1   Ahmet  Yılmaz     İdari   7000.0             0           0.0   \n",
-      "1     2    Ayşe    Kaya  Muhasebe   7500.0             0           0.0   \n",
-      "2     3  Mehmet   Demir  Dahiliye  19000.0   Kardiyoloji          10.0   \n",
-      "3     4   Fatma   Şahin   Cerrahi  16500.0      Ortopedi           8.0   \n",
-      "4    11  Doktor     Bey  Dahiliye  15000.0  ruh ve sinir           6.0   \n",
-      "5     5     Ali   Çelik      Acil   7820.0             0           0.0   \n",
-      "6     6  Zeynep  Toprak  Pediatri   7440.0             0           0.0   \n",
-      "7     7  Zeynep   Hanım  Pediatri   7440.0             0           0.0   \n",
-      "8   666     Ali  Yılmaz         0      0.0             0           0.0   \n",
-      "9   333    Ayşe    Kaya         0      0.0             0           0.0   \n",
-      "10   66   Fatma   Demir         0      0.0             0           0.0   \n",
+      "    personel no  hasta no      ad   soyad departman     maas      uzmanlik  \\\n",
+      "0           1.0       0.0   Ahmet  Yılmaz     İdari   7000.0             0   \n",
+      "1           2.0       0.0    Ayşe    Kaya  Muhasebe   7500.0             0   \n",
+      "2           3.0       0.0  Mehmet   Demir  Dahiliye  19000.0   Kardiyoloji   \n",
+      "3           4.0       0.0   Fatma   Şahin   Cerrahi  16500.0      Ortopedi   \n",
+      "4          11.0       0.0  Doktor     Bey  Dahiliye  15000.0  ruh ve sinir   \n",
+      "5           5.0       0.0     Ali   Çelik      Acil   7820.0             0   \n",
+      "6           6.0       0.0  Zeynep  Toprak  Pediatri   7440.0             0   \n",
+      "7           7.0       0.0  Zeynep   Hanım  Pediatri   7440.0             0   \n",
+      "8           0.0     666.0     Ali  Yılmaz         0      0.0             0   \n",
+      "9           0.0     333.0    Ayşe    Kaya         0      0.0             0   \n",
+      "10          0.0      66.0   Fatma   Demir         0      0.0             0   \n",
       "\n",
-      "    calisma saati        sertifika         dogum tarihi    hastalik  tedavi  \n",
-      "0             0.0                0                    0           0       0  \n",
-      "1             0.0                0                    0           0       0  \n",
-      "2             0.0                0                    0           0       0  \n",
-      "3             0.0                0                    0           0       0  \n",
-      "4             0.0                0                    0           0       0  \n",
-      "5            16.0       İlk Yardım                    0           0       0  \n",
-      "6            12.0  Yenidoğan Bakım                    0           0       0  \n",
-      "7            12.0  Yenidoğan Bakım                    0           0       0  \n",
-      "8             0.0                0  1990-05-10 00:00:00        grip    özel  \n",
-      "9             0.0                0  1992-12-15 00:00:00  zehirlenme    özel  \n",
-      "10            0.0                0  2000-05-20 00:00:00   depresyon  normal  \n",
+      "    deneyim yili  calisma saati        sertifika         dogum tarihi  \\\n",
+      "0            0.0            0.0                0                    0   \n",
+      "1            0.0            0.0                0                    0   \n",
+      "2           10.0            0.0                0                    0   \n",
+      "3            8.0            0.0                0                    0   \n",
+      "4            6.0            0.0                0                    0   \n",
+      "5            0.0           16.0       İlk Yardım                    0   \n",
+      "6            0.0           12.0  Yenidoğan Bakım                    0   \n",
+      "7            0.0           12.0  Yenidoğan Bakım                    0   \n",
+      "8            0.0            0.0                0  1990-05-10 00:00:00   \n",
+      "9            0.0            0.0                0  1992-12-15 00:00:00   \n",
+      "10           0.0            0.0                0  2000-05-20 00:00:00   \n",
+      "\n",
+      "      hastalik  tedavi  \n",
+      "0            0       0  \n",
+      "1            0       0  \n",
+      "2            0       0  \n",
+      "3            0       0  \n",
+      "4            0       0  \n",
+      "5            0       0  \n",
+      "6            0       0  \n",
+      "7            0       0  \n",
+      "8         grip    özel  \n",
+      "9   zehirlenme    özel  \n",
+      "10   depresyon  normal  \n",
       "Doktorların uzmanlıklari\n",
       "Uzmanlık alanlarına göre doktor sayıları:\n",
       "uzmanlik\n",
@@ -78,15 +91,51 @@
       "ruh ve sinir    1\n",
       "dtype: int64\n",
       "5 yıldan fazla deneyime sahip doktorlar:\n",
-      "   no      ad  soyad departman     maas      uzmanlik  deneyim yili  \\\n",
-      "2   3  Mehmet  Demir  Dahiliye  19000.0   Kardiyoloji          10.0   \n",
-      "3   4   Fatma  Şahin   Cerrahi  16500.0      Ortopedi           8.0   \n",
-      "4  11  Doktor    Bey  Dahiliye  15000.0  ruh ve sinir           6.0   \n",
+      "   personel no  hasta no      ad  soyad departman     maas      uzmanlik  \\\n",
+      "2          3.0       0.0  Mehmet  Demir  Dahiliye  19000.0   Kardiyoloji   \n",
+      "3          4.0       0.0   Fatma  Şahin   Cerrahi  16500.0      Ortopedi   \n",
+      "4         11.0       0.0  Doktor    Bey  Dahiliye  15000.0  ruh ve sinir   \n",
       "\n",
-      "   calisma saati sertifika dogum tarihi hastalik tedavi  \n",
-      "2            0.0         0            0        0      0  \n",
-      "3            0.0         0            0        0      0  \n",
-      "4            0.0         0            0        0      0  \n"
+      "   deneyim yili  calisma saati sertifika dogum tarihi hastalik tedavi  \n",
+      "2          10.0            0.0         0            0        0      0  \n",
+      "3           8.0            0.0         0            0        0      0  \n",
+      "4           6.0            0.0         0            0        0      0  \n",
+      "5 yildan fazla deneyime sahip doktor sayisi: 3\n",
+      "Hasta adına göre alfabetik sıralama\n",
+      "8       Ali\n",
+      "9      Ayşe\n",
+      "10    Fatma\n",
+      "Name: ad, dtype: object\n",
+      "Maaşı 7000 tlden fazla personeller\n",
+      "    personel no  hasta no      ad   soyad departman     maas      uzmanlik  \\\n",
+      "0          1.0       0.0   Ahmet  Yılmaz     İdari   7000.0             0   \n",
+      "1          2.0       0.0    Ayşe    Kaya  Muhasebe   7500.0             0   \n",
+      "2          3.0       0.0  Mehmet   Demir  Dahiliye  19000.0   Kardiyoloji   \n",
+      "3          4.0       0.0   Fatma   Şahin   Cerrahi  16500.0      Ortopedi   \n",
+      "4         11.0       0.0  Doktor     Bey  Dahiliye  15000.0  ruh ve sinir   \n",
+      "5          5.0       0.0     Ali   Çelik      Acil   7820.0             0   \n",
+      "6          6.0       0.0  Zeynep  Toprak  Pediatri   7440.0             0   \n",
+      "7          7.0       0.0  Zeynep   Hanım  Pediatri   7440.0             0   \n",
+      "\n",
+      "   deneyim yili  calisma saati        sertifika dogum tarihi hastalik tedavi  \n",
+      "0           0.0            0.0                0            0        0      0  \n",
+      "1           0.0            0.0                0            0        0      0  \n",
+      "2          10.0            0.0                0            0        0      0  \n",
+      "3           8.0            0.0                0            0        0      0  \n",
+      "4           6.0            0.0                0            0        0      0  \n",
+      "5           0.0           16.0       İlk Yardım            0        0      0  \n",
+      "6           0.0           12.0  Yenidoğan Bakım            0        0      0  \n",
+      "7           0.0           12.0  Yenidoğan Bakım            0        0      0  \n",
+      "Doğum tarihi 1990 ve sonrası olan hastalar:\n",
+      "    personel no  hasta no     ad   soyad departman  maas uzmanlik  \\\n",
+      "8           0.0     666.0    Ali  Yılmaz         0   0.0        0   \n",
+      "9           0.0     333.0   Ayşe    Kaya         0   0.0        0   \n",
+      "10          0.0      66.0  Fatma   Demir         0   0.0        0   \n",
+      "\n",
+      "    deneyim yili  calisma saati sertifika dogum tarihi    hastalik  tedavi  \n",
+      "8            0.0            0.0         0   1990-05-10        grip    özel  \n",
+      "9            0.0            0.0         0   1992-12-15  zehirlenme    özel  \n",
+      "10           0.0            0.0         0   2000-05-20   depresyon  normal  \n"
      ]
     }
    ],
@@ -127,11 +176,17 @@
     "print(\"personel bilgileri\")\n",
     "for kisi in tumKisiler:\n",
     "    print(\"\\n\",kisi,\"\\n\")\n",
-    "nolar=[personel1.get_personel_no(),personel2.get_personel_no(),doktor1.get_personel_no(),doktor2.get_personel_no(),doktor3.get_personel_no(),\n",
-    "       hemsire1.get_personel_no(),hemsire2.get_personel_no(),hemsire3.get_personel_no(),hasta1.get_hastaNo(),hasta2.get_hastaNo(),hasta3.get_hastaNo()]\n",
+    "\n",
+    "    # hastanın personel nosu yok\n",
+    "personel_nolar=[personel1.get_personel_no(),personel2.get_personel_no(),doktor1.get_personel_no(),doktor2.get_personel_no(),doktor3.get_personel_no(),\n",
+    "       hemsire1.get_personel_no(),hemsire2.get_personel_no(),hemsire3.get_personel_no(),None,None,None]\n",
+    "\n",
+    "hasta_nolar=[None, None, None, None, None, None, None, None,hasta1.get_hastaNo(),hasta2.get_hastaNo(),hasta3.get_hastaNo()]\n",
+    "\n",
+    "\n",
     "\n",
     "adlar=[personel1.get_ad(),personel2.get_ad(),doktor1.get_ad(),doktor2.get_ad(),doktor3.get_ad(),\n",
-    "       hemsire1.get_ad(),hemsire2.get_ad(),hemsire3.get_ad(),hasta1.get_ad(),hasta2.get_ad(),hasta3.get_ad()]\n",
+    "       hemsire1.get_ad(),hemsire2.get_ad(),hemsire3.get_ad(),hasta1.get_ad(),hasta2.get_ad(),hasta3.get_ad()] #ad ve soyadlar accsesor metod ile çağırıldı\n",
     "\n",
     "soyadlar=[personel1.get_soyad(),personel2.get_soyad(),doktor1.get_soyad(),doktor2.get_soyad(),doktor3.get_soyad(),\n",
     "       hemsire1.get_soyad(),hemsire2.get_soyad(),hemsire3.get_soyad(),hasta1.get_soyad(),hasta2.get_soyad(),hasta3.get_soyad()]\n",
@@ -193,10 +248,9 @@
     "    hasta1.get_dogumTarihi(), hasta2.get_dogumTarihi(), hasta3.get_dogumTarihi()\n",
     "]\n",
     "try:\n",
-    "    # sınıflardan alınan bilgilerin tam doru olup olmaması kontrol ediliyor\n",
+    "    # sınıflardan alınan bilgilerin tam dogru alınıp alınamadığı kontrol ediliyor\n",
     "    print(\"dataframe:\")\n",
-    "    meslekler=[\"personel\",\"personel\",\"doktor\",\"doktor\",\"doktor\",\"hemsire\",\"hemsire\",\"hemsire\",\"hasta\",\"hasta\",\"hasta\"]\n",
-    "    my_dict={\"no\":nolar,\"ad\":adlar,\"soyad\":soyadlar,\"departman\":departmanlar,\"maas\":maaslar,\"uzmanlik\":uzmanliklar,\"deneyim yili\":deneyim_yillari,\n",
+    "    my_dict={\"personel no\":personel_nolar,\"hasta no\":hasta_nolar,\"ad\":adlar,\"soyad\":soyadlar,\"departman\":departmanlar,\"maas\":maaslar,\"uzmanlik\":uzmanliklar,\"deneyim yili\":deneyim_yillari,\n",
     "            \"calisma saati\":calisma_saati,\"sertifika\":sertifikalar,\"dogum tarihi\":dogum_tarihleri,\"hastalik\":hastaliklar,\"tedavi\":tedaviler} #dataframe data olarak verilen sözlük\n",
     "    #datafrrame olusturuldu\n",
     "    myDataFrame=pd.DataFrame(my_dict) # sozluk keyleri dataframe sütunları\n",
@@ -214,9 +268,38 @@
     "\n",
     "\n",
     "    # 5 yıldan fazla deneyime sahip doktorları bulma\n",
-    "    doktorlar_fazla_5_yil=myDataFrame[myDataFrame['deneyim yili'] > 5]\n",
+    "    doktorlar_fazla_5_yil=myDataFrame[myDataFrame['deneyim yili'] > 5] #5 yıldan fzla deneyime shib doktorlarda dataframe type'ında\n",
     "    print(\"5 yıldan fazla deneyime sahip doktorlar:\")\n",
     "    print(doktorlar_fazla_5_yil)\n",
+    "\n",
+    "\n",
+    "    doktor_sayisi=doktorlar_fazla_5_yil.shape[0] #shape metodu 1. elemani satir sayisi 2. elemanı sütun sayısı oln tuple döndürür\n",
+    "    print(\"5 yildan fazla deneyime sahip doktor sayisi:\",doktor_sayisi)\n",
+    "\n",
+    "    #alfabetik olarak sıralanan hasta adlari\n",
+    "    #sadece hastaların dogum tarihi none degil o yüzden dogum tarihi sütununa göre grupladım\n",
+    "    df_hastalar=myDataFrame[myDataFrame[\"dogum tarihi\"] !=0]\n",
+    "    sirali_hastalar=df_hastalar.sort_values('ad')\n",
+    "    print(\"Hasta adına göre alfabetik sıralama\")\n",
+    "    print(sirali_hastalar[\"ad\"])\n",
+    "\n",
+    "    #maasi 7000 den buyuk olanlar\n",
+    "    maas_filtre=myDataFrame[myDataFrame[\"maas\"]>=7000]\n",
+    "    print(\"Maaşı 7000 tlden fazla personeller\\n\",maas_filtre)\n",
+    "\n",
+    "    #dogum tarihine göre hastalar\n",
+    "\n",
+    "    #sadece hastaların dogum trihi olduğu için bir ayırma ypmadan direkt dataframe olusturdum\n",
+    "    myDataFrame['dogum tarihi']=pd.to_datetime(myDataFrame['dogum tarihi']) #pd.to_datetime() fonksiyonu, verilen tarih verilerini pandas'ın anlayabileceği bir datetime formatına dönüştürüyor\n",
+    "\n",
+    "    # Doğum tarihi 1990 ve sonrası olan hastaları filtreleyelim\n",
+    "    filtre=myDataFrame['dogum tarihi'].dt.year >= 1990\n",
+    "    hastalar_filtrelenmis=myDataFrame[filtre]\n",
+    "\n",
+    "    # Filtrelenmiş verileri yazdıralım\n",
+    "    print(\"Doğum tarihi 1990 ve sonrası olan hastalar:\")\n",
+    "    print(hastalar_filtrelenmis)\n",
+    "\n",
     "except:\n",
     "    print(\"Nesneler oluşturulamadı\")\n",
     "\n",
